--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,xcode,swift,git
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,xcode,swift,git
 
+Orion/RenderedImageView
+
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
